# anvil

./: Cargo.toml  README.es.md  README.md  TODO.md
src/: appimage.rs  args.rs  desktop_entry.rs  directory.rs  icon.rs  lib.rs  main.rs  permissions.rs  utils.rs
tests/: test_appimage.rs  test_desktop_entry.rs  test_directory.rs  test_icon.rs  test_permissions.rs  test_utils.rs
