[package]
name = "anvil-appimage"
version = "1.0.0"
authors = ["Jorge Guedes"]
description = "Automatically install AppImages with desktop integration"
license = "MIT"
repository = "https://github.com/Jorge-Guedes/anvil"
readme = "README.md"
keywords = ["appimage", "linux", "installer", "cli", "desktop"]
categories = ["command-line-utilities", "filesystem"]
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3.26.0"
